--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@reach/dialog": "^0.2.8",
     "@reach/tooltip": "^0.2.0",
     "copy-to-clipboard": "^3.2.0",
