--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
     "jazzicon": "^1.5.0",
+    "moment": "^2.24.0",
     "polished": "^3.3.2",
     "react": "^16.8.6",
     "react-device-detect": "^1.6.2",
@@ -29,7 +30,10 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.1",
     "react-spring": "^8.0.20",
+    "react-timeago": "^4.4.0",
+    "react-toastify": "^5.2.1",
     "styled-components": "^4.2.0",
+    "timeago": "^1.6.7",
     "web3-react": "^5.0.4"
   },
   "scripts": {
