--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,3 @@
 REACT_APP_NETWORK_ID="1"
-<<<<<<< HEAD
-REACT_APP_NETWORK_URL=""
+REACT_APP_NETWORK_URL="https://mainnet.infura.io/v3/<project-id>"
 REACT_APP_IPFS_GATEWAY="https://ipfs.kleros.io"
-=======
-REACT_APP_NETWORK_URL=""
->>>>>>> uniswap-original/beta
