volta pin node@16

--- a/package.json
+++ b/package.json
@@ -156,5 +156,8 @@
     ]
   },
   "license": "GPL-3.0-or-later",
-  "dependencies": {}
+  "dependencies": {},
+  "volta": {
+    "node": "16.17.1"
+  }
 }
